--- a/changelog.html
+++ b/changelog.html
@@ -5,6 +5,14 @@
 <h2>Changes between versions are recorded here.</h2>
 
 <hr>
+<h3>Version 1.1</h3>
+<pre>
+ - Improved HD44780U:
+     Display shift
+     CGRAM support
+</pre>
+
+<hr>
 <h3>Version 1.0</h3>
 <pre>
  - Simulation kernel
