--- a/changelog.html
+++ b/changelog.html
@@ -5,6 +5,12 @@
 <h2>Changes between versions are recorded here.</h2>
 
 <hr>
+<h3>Version 1.2.1</h3>
+<pre>
+ - Play button now starts and runs the simulation
+</pre>
+
+<hr>
 <h3>Version 1.2</h3>
 <pre>
  - Resolved bug with pin tooltips on selected component
